log_output/greeter/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: greeter
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3002
